# pure-markdown

./: Cargo.toml  README.md
src/: lib.rs  types.rs
src/block/: fenced_code.rs  indented_code.rs  mod.rs
src/inline/: emphasis_or_strong.rs  mod.rs  temp_str.rs  text.rs
src/parser_combinator/: macros.rs  mod.rs
