[package]
name = "pure-markdown"
version = "0.1.0"
authors = ["CSUwangj <CSUwangj@protonmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "Pure markdown parser follow GFM syntax"
keywords = ["parser", "markdown"]
categories = ["parser"]
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dependencies.nom]
version = "6.0.1"
features = ["default", "std"]
